--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +17,7 @@
     "react-helmet": "^6.1.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.0.1",
+    "react-material-ui-carousel": "^2.3.11",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
@@ -49,5 +52,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://192.168.0.6:4000"
+  "proxy": "http://192.168.0.6:4000"
 }
