--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.5",
+    "core-js": "^2.5.7",
     "overlay-navbar": "^1.2.3",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
@@ -21,7 +22,8 @@
     "react-material-ui-carousel": "^2.3.11",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.3",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
