--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.5",
     "core-js": "^2.5.7",
+    "country-state-city": "^3.2.1",
     "overlay-navbar": "^1.2.3",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
