--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.0.4",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
+    "stripe": "^14.17.0",
     "validator": "^13.11.0"
   }
 }
