--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.5",
+    "chart.js": "^4.4.1",
     "core-js": "^2.5.7",
     "country-state-city": "^3.2.1",
     "overlay-navbar": "^1.2.3",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icon": "^1.0.0",
